--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,6 +40,13 @@ main {
 	height: 110px;
 }
 
+.custom-btn-small {
+    height: 24px;
+    line-height: 24px;
+    padding: 0 0.5rem;
+    font-size: 10px;
+}
+
 .edit-btn, .cancel-btn, .arrived-btn {
 	margin: 2px 0;
 }
