--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,6 +27,11 @@ main {
 	margin: 15px 0;
 }
 
+#modal-close-icon {
+	top: 10px;
+	right: 10px;
+}
+
 #partyform-content {
 	padding: 30px 40px 0 40px;
 }
