--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,6 +32,17 @@ main {
 	right: 10px;
 }
 
+.loading-wrapper {
+	width: 100px;
+	margin: 15px auto;
+	/*border: 2px solid red;*/
+	/*overflow: hidden;*/
+}
+
+.loading-wrapper img {
+	width: 100%;
+}
+
 #partyform-content {
 	padding: 30px 40px 0 40px;
 }
