refactored LoadingContainer to allow renderLoading prop, which enables inline component rendering. also added text prop to Loading for loading text customization, and made gif smaller.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,12 +35,15 @@ main {
 .loading-wrapper {
 	width: 100px;
 	margin: 15px auto;
+	text-align: center;
 	/*border: 2px solid red;*/
 	/*overflow: hidden;*/
 }
 
 .loading-wrapper img {
-	width: 100%;
+	width: 80px;
+	margin: 8px auto;
+	display: block;
 }
 
 #partyform-content {
